# ChangeLog for dev-python/urwid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/urwid/ChangeLog,v 1.72 2014/08/10 21:24:44 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> urwid-0.9.9.1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*urwid-1.2.1 (08 Apr 2014)

  08 Apr 2014; Tim Harder <radhermit@gentoo.org> +urwid-1.2.1.ebuild:
  Version bump.

  03 Apr 2014; Tim Harder <radhermit@gentoo.org> urwid-1.2.0.ebuild:
  Add python3_4 support.

*urwid-1.2.0 (15 Mar 2014)

  15 Mar 2014; Tim Harder <radhermit@gentoo.org> +urwid-1.2.0.ebuild:
  Version bump.

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> urwid-1.1.0.ebuild:
  Stable for ppc64, wrt bug #497622

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> urwid-1.1.0.ebuild:
  Stable for ppc, wrt bug #497622

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> urwid-1.1.0.ebuild:
  Stable for x86, wrt bug #497622

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> urwid-1.1.0.ebuild:
  amd64 stable, bug #497622

*urwid-1.1.2 (25 Jan 2014)

  25 Jan 2014; Tim Harder <radhermit@gentoo.org> +urwid-1.1.2.ebuild:
  Version bump.

  05 Jan 2014; Jan Matejka <yac@gentoo.org> urwid-1.0.2.ebuild:
  <1.1 doesn't work with python > 3.2

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> urwid-1.1.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> urwid-0.9.9.1.ebuild,
  urwid-1.0.2.ebuild, urwid-1.1.0.ebuild, urwid-1.1.1.ebuild,
  urwid-1.1.1-r1.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

*urwid-1.1.1-r1 (14 Mar 2013)

  14 Mar 2013; Tim Harder <radhermit@gentoo.org> +urwid-1.1.1-r1.ebuild:
  Revbump and migrate to distutils-r1.

*urwid-1.1.1 (24 Nov 2012)

  24 Nov 2012; Tim Harder <radhermit@gentoo.org> urwid-1.1.0.ebuild,
  +urwid-1.1.1.ebuild:
  Version bump. Fix html docs build with python-3.

  05 Nov 2012; Tim Harder <radhermit@gentoo.org> urwid-0.9.9.1.ebuild,