@@ -9,6 +9,7 @@ DIST urwid-1.1.1.tar.gz 482432 SHA256 b301b4e0c2cd1634390cda80149d8aa2a07365af81
 DIST urwid-1.1.2.tar.gz 483444 SHA256 f56568b4f8459b3265c65d9e275ef72df6cb16ad0c291f0feb027cc911ea0f26 SHA512 921b06dd76eb56012dcd849168c7c819cb17d53318f9518295f0c2b33371c5a53245e4aa677698d3e0f7eec4a43e3a1f617b6ff3aa3cd0b9a384e9122c495a00 WHIRLPOOL f24752ff9b84cca12bf018dbdf83982eb8fd81329dd0853cbdf8e9e4176c4c76e5596ebfcffac03640cfe46e64bb57f69d19a36df36aeab4545e1bb36c129430
 DIST urwid-1.2.0.tar.gz 584865 SHA256 ee40585ab06031839c4b40daba3c25e69057e1b150ea45b07ceffd2516f35250 SHA512 85393d4374c9d73288fba537f930fb3dd6637c43b5a95af0ba2ab5bf36671edcc31beeec4d5c8d9daaebb4346d5d249f81ba428a58a9a778b3f44f190ac1f623 WHIRLPOOL e7f0ef8c64e6db7184792810bafaf0e0584b929142672853127c5da330c50883e3e36c7fc93081e8da6a379c4a19112e16065e7b87b491202354c7a96cad4a08
 DIST urwid-1.2.1.tar.gz 578088 SHA256 9b9b5dabb7df6c0f12e84feed488f9a9ddd5c2d66d1b7c7c087055720b87c68c SHA512 8f67887007912e79d32e55caf9615db4d01e3eff0fc9fe056b89e1e0c2db132178b5640dc38d2dbbe59036f6842d8b5e7161bcd49526f1baec25992dd4427fd6 WHIRLPOOL 29cfb322cbfbfcccfc1ab4dbb72ed869157a856769674397b22b5bafc3b0155f4d8105b55bf0549a0e8999fce5390ced4c212e003f60d1558c1c006c1c350e4a
+DIST urwid-1.2.2.tar.gz 585025 SHA256 e122e2dee122314f5626945af4dbe15bf3de9f318c552a4c0b68c1c480852d92 SHA512 10d0271e52b28aff3350d3342cd9b1c8fab819f3619cce77286b2545b74dd967f0466e98dfbfef1189b3ab6b38392168367d75c768b0f5b8058666b0211706a5 WHIRLPOOL 69556a721d89f6a6b82664bf5eaa10a21c49d15f9b8e6e6be4ba31ce5e2317fd0ecebfa3d93b008f9bd93f10504161d93e1827d696a6c1baa09939ac628f027d
 EBUILD urwid-0.9.9.1.ebuild 1051 SHA256 4fa14d988925887b57903801e756a7f9593c57837e7504dd308d71a88be11fe2 SHA512 006d23da31fbd7cd0e63cf8a51dac6e7566c9d31da0e7d6a9b44e96b19d12a54fcbc06d98033ba3b2d04dcd09618f9a9ed74e313abf2bf7f1c81fe299af29355 WHIRLPOOL fb8b7ffe1f0457848012df537d5d23dc031bc8c16f943ff6b5db4d4953c84190bd09a409145a55021f20843b644031c485007010adb6f937d7d12bd02e312972
 EBUILD urwid-1.0.2.ebuild 1082 SHA256 083574987a5ded07736fadb4037a2fdfb08aea070134468eb14ebae3d162e5fa SHA512 564908a8ca6f81092b5448a727a5b88755b45ed43043fc5b4f3c21f48879be8f6a616126441443957aa033775c1bb54c96cec6ab764ab05f9a5fadd1b8c94b71 WHIRLPOOL dadeed777beaaa2c4a2441878cdcd90f8b9cbfd001bb730d3d3076b3e307b7e7eb7e59b4bc09f95aa04e734876ccf5ed5e3fa211375da37eb4582f6d3afffa8e
 EBUILD urwid-1.1.0.ebuild 1442 SHA256 b535a1e67d4e2a9e97d5090987afe07c2bc779a0035f63ed41284902c7f63ed7 SHA512 9cbcddb421d4680f1f9c615865bc032079071baa22284713036121d1f5c341500b42b762de13e5ba65ff1666fa73137c6a0533bc3871ded60ff3914ae8e6e02d WHIRLPOOL a1820b808b43e2c5ae71f2c2e043830c77312d96e28e6ab8258035e5c9ccd4dc7dfd7712c06237f5d5a835aa28e00c79b9cd6a1c5dd6c7e6c2ed6a0c8b151b2a
@@ -17,12 +18,17 @@ EBUILD urwid-1.1.1.ebuild 1456 SHA256 42f05b708b37cdf711d1bc4e5dd74efadd6cf0f55c
 EBUILD urwid-1.1.2.ebuild 1388 SHA256 cc79507886194f518bf536278e198e2935a41064da8e5e523f46bc312472f369 SHA512 7dcc57beb141041f70e2456947cee3300088f05f64dff68dc8efcfe1be83ba2a105f8a2c0052f6aef7a286fc1567f04ebeaae4dcbb1553e8ae9771d301b6ce63 WHIRLPOOL f4211bc6d922a7090db5d4ef7263f5729e94806badb388848153ab68bccb790beb1ca3acea0a46191dc54a41a903fd2f283156faa8e6a19470b759ccc7a7735a
 EBUILD urwid-1.2.0.ebuild 1392 SHA256 f52ca43cdb1d076fa759c78245d82878bc96b73b98c7f21d97740c205ded24e3 SHA512 de03c38d2d65a580dfd8974da8b73754e11b8aed0eb534d4ed0384ec38f05f0400e9932d9b2592c5580ac90c6066af8f60ecf2f46b12c185c85ce5bf51f60eb3 WHIRLPOOL 3c42a97095c4cc369e35607311d95ec822c3db849fa9116ecd0dbf575f2dd27100308d8272fd66941e074c5723a661f6d25e8a956e7f19acd9fc011036f0b54e
 EBUILD urwid-1.2.1.ebuild 1392 SHA256 bc5f4d3c442e01ad1664dff1c1ce722dd1d1905c0a72c03c4015a0a574c01d08 SHA512 7cc4d507accc6a22e18ebb0e5a3a992b15fca668fef5d8607c6b508ecb789fbde908b44554e691e3b0b40cda17ebe72bcc0377a06e5f5472f99b3b134ef3bc6c WHIRLPOOL c922e0a1ba74306b8be841455a9ed287384b4f9cce5d5fa934a6b00790ab6b2609a2a0f51a9dae0eeb50dc44c92db17a0cfc60c1e03e9c990665f95f45917756
-MISC ChangeLog 9219 SHA256 72744fc5ce1ede8f06b9389222abdcf62ac19df27d36eec50e86beffa3cb8141 SHA512 7ab3fdfeeda09b46fa3e465608bb01dda016872191223f5774339e176b68db221a46701f0df4a9ce392cea453dd88d63ee73cda9d6554cc32922da24f57103f4 WHIRLPOOL 7b4cf2f60394f35b10f19b33787b42a195de327804af11e91de4ac469d2c7b2aa947cb3bdad8a0f5430936e9ef6ce3b791cfb7966da63391e1f6b2a2064ca7ac
+EBUILD urwid-1.2.2.ebuild 1384 SHA256 ae7c68cdb3dbf73200a3b17504f61e1edb065ee11026029b8678b5e1dadbb57f SHA512 c34078d57e50561b946b669cf15e20a842ddfa50c15f86968b6dac1be099ee2be538587c23ce2cf90b9a31d0ab173cdce82b9816d00eb0c5c5b18f01dfeab68e WHIRLPOOL 46045c59bbe1db392a5e0741c9f0530367543bc5158e7af6fa9d6186832c0b2abe3cacccfa324e8b62647c3069b868ca8ea3817e4c05faa6e8008a0980ca457e
+MISC ChangeLog 9337 SHA256 cb5197923d408af5457d2e844ecb7f2360c0455f2f28cd0588fede3f1c8262b9 SHA512 ef4fb1e62cca5b0cadbe85604badfcc9586c9203a5c4856980fc99e64877b6b9252acb679c38a2f5c416dc0f809a084ec8ef8a383061a09581f841e89541e151 WHIRLPOOL 7517704d44627109a967af0ab66638310ba06b720d7ecde87898dfeef58839709c5058f76dfb00b8477280054a2059d7f894bb279df048de9b905ddfc17dda1c
 MISC metadata.xml 991 SHA256 0f02e35aee7374005a2ba830c2e6db437a7a29cb458dddf30ea31336f4f6d0de SHA512 1076785c63c180b0bc38c462d0df81362425ecca0a2f7b6ca4a2076bc5d9013ab9692ddd26c9389fb7d1bfa2577b393cf7c93c8ce92e70fb8edbb7fbe5ec53df WHIRLPOOL 4a7f37d41bc0c2ec90ae1889e601d65dab7c14d318dc39e890c6bb44a686f1226926158a132d70dcfb8144874c430f569b6ad4163dfaa4385e0a4cf6e784524d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn4x0ACgkQcaHudmEf86rXQgCeNX0QEGDOrb5uG+Yr0RaZtKBf
-nNwAniH07BfzctwA27dJYoSU2/qBQ3bL
-=WKNz
+iQEcBAEBCAAGBQJUPhBvAAoJEEqz6FtPBkyjnvgIAJ0ZIzdBK8o1ve6nFzoRKAm9
+nFZeXWVdk+Kz9ag38iqutbm7NaMMYKVloh1S3OhGOHHUPp+OBxV9YI+adEnh4wpn
+4v8bV6jKYlJyTkx8x013KqL3Sx7c8uyE53rmotkQztP2i+CNJe574obnjF9O0iqm
+E3mtgiukNqTgyL0Tn+wu1XeioPPPRLoc92lYHGXFaNOWdWgYyenfblg2K+FbPf23
+uIsZyY+QRGInmCxEv5ZcvZ8kJvb3ovt/Y2/SCXBKmEUrt2hXeHEWtD99CmlIyH5q
+zJ53qFa51qImq3YaW/MDiS48oaNv0PDbdIVuL9+Ax+1beIChkRPL424VTgA9h0g=
+=qR0K
 -----END PGP SIGNATURE-----
